<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dip"
        android:layout_height="50dip" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/packagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/usageinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView android:id="@+id/usageinfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:id="@+id/data_stat_layout"
        	android:baselineAligned="false" 
        	android:layout_width="fill_parent"
            android:layout_height="80dip"
            android:orientation="horizontal"
            >
        <LinearLayout             
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:text="@string/wifi"
                android:textStyle="bold"
                android:textColor="#666666"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:text="@string/cellular"
                android:textStyle="bold"
                android:textColor="#666666"/>
        </LinearLayout>
        <LinearLayout android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:text="@string/sent"
                android:textStyle="bold"
                android:textColor="#666666"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:id="@+id/wifi_sent"
                android:textStyle="bold"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:id="@+id/cellular_sent"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:text="@string/received"
                android:textStyle="bold"
                android:textColor="#666666"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:id="@+id/wifi_received"
                android:textStyle="bold"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:textStyle="bold"
                android:id="@+id/cellular_received"/>
        </LinearLayout>
        <LinearLayout android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:textColor="#666666"
                android:text="@string/percentage"
                android:textStyle="bold"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:textStyle="bold"
                android:id="@+id/wifi_percent"/>
            <TextView android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:textStyle="bold"
                android:id="@+id/cellular_percent"/>
        </LinearLayout>
    </LinearLayout>    

</LinearLayout>